# schoolplatform

./: alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0537bbac37f0_v12.py  5842b8c55434_v10.py  e3708bbca472_v11.py
app/: main.py
app/core/db/: crud.py  database.py  models.py  schema.py
app/dependencies/: db.py
app/endpoints/: api.py
app/endpoints/models/: item.py  user.py
